[gd_scene load_steps=46 format=2]

[ext_resource path="res://addons/rmsmartshape/materials/shape_material.gd" type="Script" id=1]
[ext_resource path="res://addons/rmsmartshape/shapes/shape_open.gd" type="Script" id=2]
[ext_resource path="res://scene/DepthController.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/rmsmartshape/shapes/point_array.gd" type="Script" id=4]
[ext_resource path="res://script/breakable_wall2.gd" type="Script" id=5]
[ext_resource path="res://material/mix_shader_no_alpha.tres" type="Material" id=6]
[ext_resource path="res://addons/rmsmartshape/shapes/point.gd" type="Script" id=7]
[ext_resource path="res://addons/rmsmartshape/vertex_properties.gd" type="Script" id=8]
[ext_resource path="res://img/textures/asphalt.png" type="Texture" id=9]
[ext_resource path="res://addons/rmsmartshape/materials/edge_material.gd" type="Script" id=10]
[ext_resource path="res://addons/rmsmartshape/materials/edge_material_metadata.gd" type="Script" id=11]
[ext_resource path="res://addons/rmsmartshape/normal_range.gd" type="Script" id=12]

[sub_resource type="Resource" id=19]
script = ExtResource( 8 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=20]
script = ExtResource( 7 )
position = Vector2( 66.2773, 246.597 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 19 )

[sub_resource type="Resource" id=21]
script = ExtResource( 8 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=22]
script = ExtResource( 7 )
position = Vector2( 498.05, 184.688 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 21 )

[sub_resource type="Resource" id=23]
script = ExtResource( 8 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=24]
script = ExtResource( 7 )
position = Vector2( 294.863, 10.0738 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 23 )

[sub_resource type="Resource" id=25]
script = ExtResource( 8 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=26]
script = ExtResource( 7 )
position = Vector2( 864.74, 38.647 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 25 )

[sub_resource type="Resource" id=27]
script = ExtResource( 8 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=28]
script = ExtResource( 7 )
position = Vector2( 715.816, 432.066 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 27 )

[sub_resource type="Resource" id=29]
script = ExtResource( 8 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=30]
script = ExtResource( 7 )
position = Vector2( 515.578, 383.331 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 29 )

[sub_resource type="Resource" id=31]
script = ExtResource( 8 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=32]
script = ExtResource( 7 )
position = Vector2( 324.052, 552.319 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 31 )

[sub_resource type="Resource" id=33]
script = ExtResource( 8 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=34]
script = ExtResource( 7 )
position = Vector2( 988.663, 584.391 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 33 )

[sub_resource type="Resource" id=35]
script = ExtResource( 8 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=36]
script = ExtResource( 7 )
position = Vector2( 204.672, 734.062 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 35 )

[sub_resource type="Resource" id=37]
script = ExtResource( 8 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=38]
script = ExtResource( 7 )
position = Vector2( -82.2857, 505.24 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 37 )

[sub_resource type="Resource" id=39]
script = ExtResource( 8 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=40]
script = ExtResource( 7 )
position = Vector2( -157.796, 212.639 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 39 )

[sub_resource type="Resource" id=41]
script = ExtResource( 8 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=42]
script = ExtResource( 7 )
position = Vector2( -8.66348, 14.425 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 41 )

[sub_resource type="Resource" id=43]
script = ExtResource( 8 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=44]
script = ExtResource( 7 )
position = Vector2( 448.172, -232.87 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 43 )

[sub_resource type="Resource" id=45]
script = ExtResource( 8 )
texture_idx = 2
flip = false
width = 1.0

[sub_resource type="Resource" id=46]
script = ExtResource( 7 )
position = Vector2( 833.272, -106.391 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 45 )

[sub_resource type="Resource" id=47]
script = ExtResource( 4 )
_points = {
0: SubResource( 20 ),
1: SubResource( 22 ),
2: SubResource( 24 ),
3: SubResource( 26 ),
4: SubResource( 28 ),
5: SubResource( 30 ),
6: SubResource( 32 ),
7: SubResource( 34 ),
8: SubResource( 36 ),
9: SubResource( 38 ),
10: SubResource( 40 ),
11: SubResource( 42 ),
12: SubResource( 44 ),
13: SubResource( 46 )
}
_point_order = [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
_constraints = {
}
_next_key = 0

[sub_resource type="Resource" id=16]
script = ExtResource( 10 )
textures = [ ExtResource( 9 ) ]
texture_normals = [  ]
textures_corner_outer = [  ]
textures_corner_inner = [  ]
texture_normals_corner_outer = [  ]
texture_normals_corner_inner = [  ]
textures_taper_left = [  ]
textures_taper_right = [  ]
texture_normals_taper_left = [  ]
texture_normals_taper_right = [  ]
use_corner_texture = false
use_taper_texture = false
fit_mode = 0

[sub_resource type="Resource" id=17]
script = ExtResource( 12 )
begin = 0.0
distance = 0.0
edgeRendering = Vector2( 0, 0 )

[sub_resource type="Resource" id=18]
script = ExtResource( 11 )
edge_material = SubResource( 16 )
normal_range = SubResource( 17 )
weld = true
render = true
z_index = 0
z_as_relative = true
offset = 0.0

[sub_resource type="Resource" id=2]
script = ExtResource( 1 )
_edge_meta_materials = [ SubResource( 18 ) ]
fill_textures = [  ]
fill_texture_normals = [  ]
fill_texture_z_index = -10
fill_mesh_offset = 0.0
render_offset = 0.0

[node name="BreakableWall2" type="StaticBody2D"]
material = ExtResource( 6 )
script = ExtResource( 5 )

[node name="SS2D_Shape_Open" type="Node2D" parent="."]
material = ExtResource( 6 )
script = ExtResource( 2 )
_points = SubResource( 47 )
material_overrides = {
}
shape_material = SubResource( 2 )
tessellation_stages = 5
tessellation_tolerence = 4.0
flip_edges = false
render_edges = true
collision_size = 32.0
collision_offset = 0.0
collision_polygon_node_path = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 66.2773, 246.597, 489.039, 182.06, 284.818, 6.06162, 870.246, 35.0442, 715.816, 432.066, 685.888, 420.737, 516.013, 385.092, 333.472, 549.015, 1002.74, 583.401, 204.321, 735.482, -82.9781, 505.689, -159.35, 212.33, -8.90345, 14.1464, 448.055, -234.17, 833.272, -106.391, 823.287, -75.9887, 450.913, -202.298, 11.9786, 38.3938, -127.964, 218.569, -56.1256, 488.283, 211.998, 704.416, 970.817, 585.646, 303.275, 559.607, 508.341, 354.026, 693.456, 389.645, 843.469, 52.5653, 314.535, 17.9312, 519.76, 191.019, 70.8191, 278.273 )

[node name="Tween" type="Tween" parent="."]

[node name="DepthController" parent="." instance=ExtResource( 3 )]

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
bus = "SFX"

[connection signal="hide" from="DepthController" to="." method="_on_hide"]
[connection signal="show" from="DepthController" to="." method="_on_show"]
